--- a/vue/index.html
+++ b/vue/index.html
@@ -10,5 +10,7 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
+    <script src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
   </body>
 </html>
